--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="header">
-      <h1>Guestbook - demo</h1>
+      <h1>Guestbook - simple change</h1>
     </div>
 
     <div id="guestbook-entries">
